--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,8 @@ decorator @ file:///tmp/build/80754af9/decorator_1617916966915/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
 diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
 distributed @ file:///C:/ci/distributed_1617384292700/work
-dlib @ file:///F:/Projects/CCC12/dlib-19.19.0-cp37-cp37m-win_amd64.whl
+cmake
+dlib
 docutils @ file:///C:/ci/docutils_1617481620173/work
 entrypoints==0.3
 et-xmlfile==1.0.1
