--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
-cmake==3.12.0
 colorama==0.4.3
 contrib==0.3.0
 cycler==0.10.0
 Cython==0.29.15
 decorator==4.4.1
+dlib
 dill==0.3.1.1
 fire==0.2.1
 Flask==1.1.1
